--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -1,22 +1,18 @@
 @import url('https://fonts.googleapis.com/css2?family=Texturina:wght@300;900&display=swap');
 
 .header {
+  width: 100%;
   font-family: $font;
-  margin: auto;
-  width: 1260px;
-  height: 25vw;
-  text-align: center;
-  display: flex;
-  flex-flow: row wrap;
+  height: 12vw;
 
-  &__title{
-    font-size: 65px;
-    width: 100%;
+  &__wrapper{
+    background: rgba(0,0,0,.6);
   }
 
-  &__text {
-    margin: auto;
-    font-size: 42px;
+  &__logo {
+    font-size: 24px;
+    color: #cf4444;
+    padding: 4rem 0 0 5rem;
   }
 }
 
